--- a/DNTProfiler.Infrastructure/Views/ContextsView.xaml
+++ b/DNTProfiler.Infrastructure/Views/ContextsView.xaml
@@ -21,6 +21,7 @@
                       VirtualizingStackPanel.VirtualizationMode="Recycling"
                       behaviors:GridViewSortBehavior.AutoSort="True"
                       behaviors:GridViewSortBehavior.ResetSort="{Binding GuiModelData.ResetSort}"
+                      behaviors:PixelBasedScrollingBehavior.IsEnabled="True"
                       Margin="3">
             <ListView.ItemsPanel>
                 <ItemsPanelTemplate>
