--- a/DNTProfiler.Infrastructure/Views/TrafficUrls.xaml
+++ b/DNTProfiler.Infrastructure/Views/TrafficUrls.xaml
@@ -21,11 +21,12 @@
                       VirtualizingStackPanel.VirtualizationMode="Recycling"
                       behaviors:GridViewSortBehavior.AutoSort="True"
                       behaviors:GridViewSortBehavior.ResetSort="{Binding GuiModelData.ResetSort}"
+                      behaviors:PixelBasedScrollingBehavior.IsEnabled="True"
                       Margin="3">
             <ListView.ItemsPanel>
                 <ItemsPanelTemplate>
-                    <VirtualizingStackPanel 
-                        IsVirtualizing="True" 
+                    <VirtualizingStackPanel
+                        IsVirtualizing="True"
                         VirtualizationMode="Recycling" />
                 </ItemsPanelTemplate>
             </ListView.ItemsPanel>
