--- a/Plugins/DNTProfiler.ApplicationExceptions/Main.xaml
+++ b/Plugins/DNTProfiler.ApplicationExceptions/Main.xaml
@@ -27,6 +27,7 @@
                   behaviors:GridViewSortBehavior.AutoSort="True"
                   behaviors:AutoSizeListViewColumns.Enable="True"
                   behaviors:GridViewSortBehavior.ResetSort="{Binding GuiModelData.ResetSort}"
+                  behaviors:PixelBasedScrollingBehavior.IsEnabled="True"
                   Margin="3">
             <ListView.ItemsPanel>
                 <ItemsPanelTemplate>
