--- a/Plugins/DNTProfiler.RawLogger/Main.xaml
+++ b/Plugins/DNTProfiler.RawLogger/Main.xaml
@@ -28,6 +28,7 @@
             VirtualizingStackPanel.VirtualizationMode="Recycling"
             behaviors:GridViewSortBehavior.AutoSort="True"
             behaviors:GridViewSortBehavior.ResetSort="{Binding ThisGuiModelData.ResetSort}"
+            behaviors:PixelBasedScrollingBehavior.IsEnabled="True"
             Margin="3">
             <ListView.ItemsPanel>
                 <ItemsPanelTemplate>
@@ -38,7 +39,7 @@
             </ListView.ItemsPanel>
             <ListView.View>
                 <GridView>
-                    <GridViewColumn Width="40" Header="#" behaviors:GridViewSortBehavior.PropertyName="Id">
+                    <GridViewColumn Width="40" Header="#" behaviors:GridViewSortBehavior.PropertyName="ReceivedId">
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
                                 <TextBlock Text="{Binding ReceivedId, Mode=OneTime}"  />
@@ -47,7 +48,7 @@
                     </GridViewColumn>
                     <GridViewColumn Width="150" Header="Type"
                                     behaviors:AutoSizeListViewColumns.AutoSizeColumn="True"
-                                    behaviors:GridViewSortBehavior.PropertyName="Type">
+                                    behaviors:GridViewSortBehavior.PropertyName="InfoType">
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
                                 <TextBlock Text="{Binding Mode=OneTime, Converter={StaticResource BaseInfoTypeConverter}}"  />
