--- a/DNTProfiler.Infrastructure/Views/TrafficUrls.xaml
+++ b/DNTProfiler.Infrastructure/Views/TrafficUrls.xaml
@@ -4,25 +4,22 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:behaviors="clr-namespace:DNTProfiler.Common.Behaviors;assembly=DNTProfiler.Common"
-             xmlns:converters="clr-namespace:DNTProfiler.Common.Converters;assembly=DNTProfiler.Common"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
-    <UserControl.Resources>
-        <converters:ObjectToJsonConverter x:Key="ParametersToJsonConverter" />
-    </UserControl.Resources>
     <Grid x:Name="ThisGrid">
         <ListView ItemsSource="{Binding GuiModelData.RelatedTrafficUrls}" Name="ThisListView"
-                      HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
-                      SelectedItem="{Binding GuiModelData.SelectedTrafficUrl}" MinHeight="100"
-                      ScrollViewer.CanContentScroll="True"
-                      ScrollViewer.HorizontalScrollBarVisibility="Auto"
-                      ScrollViewer.VerticalScrollBarVisibility="Auto"
-                      VirtualizingStackPanel.IsVirtualizing="True"
-                      VirtualizingStackPanel.VirtualizationMode="Recycling"
-                      behaviors:GridViewSortBehavior.AutoSort="True"
-                      behaviors:GridViewSortBehavior.ResetSort="{Binding GuiModelData.ResetSort}"
-                      behaviors:PixelBasedScrollingBehavior.IsEnabled="True"
-                      Margin="3">
+                  Height="{Binding Path=ActualHeight, RelativeSource={RelativeSource AncestorType=Grid}}"
+                  HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
+                  SelectedItem="{Binding GuiModelData.SelectedTrafficUrl}" MinHeight="100"
+                  ScrollViewer.CanContentScroll="True"
+                  ScrollViewer.HorizontalScrollBarVisibility="Auto"
+                  ScrollViewer.VerticalScrollBarVisibility="Auto"
+                  VirtualizingStackPanel.IsVirtualizing="True"
+                  VirtualizingStackPanel.VirtualizationMode="Recycling"
+                  behaviors:GridViewSortBehavior.AutoSort="True"
+                  behaviors:GridViewSortBehavior.ResetSort="{Binding GuiModelData.ResetSort}"
+                  behaviors:PixelBasedScrollingBehavior.IsEnabled="True"
+                  Margin="3">
             <ListView.ItemsPanel>
                 <ItemsPanelTemplate>
                     <VirtualizingStackPanel
@@ -37,7 +34,7 @@
                             <DataTemplate>
                                 <Button Width="20" Height="20"
                                         Command="{Binding DataContext.DoOpenPopupToolTip, ElementName=ThisGrid}"
-                                        CommandParameter="{Binding Converter={StaticResource ParametersToJsonConverter}}">
+                                        CommandParameter="{Binding}">
                                     <Image Source="Images/json.png" Width="16" Height="16" />
                                 </Button>
                             </DataTemplate>
@@ -167,7 +164,7 @@
             <ListView.ContextMenu>
                 <ContextMenu>
                     <MenuItem Command="{Binding DoCopySelectedLine}"
-                                  CommandParameter="{Binding GuiModelData.SelectedTrafficUrl}"
+                              CommandParameter="{Binding GuiModelData.SelectedTrafficUrl}"
                               Header="Copy selected line to clipboard">
                         <MenuItem.Icon>
                             <Image Stretch="UniformToFill" Width="16" Height="16"  Source="Images/CopyHS.png" HorizontalAlignment="Center" VerticalAlignment="Center" />
