--- a/DNTProfiler/MainWindow.xaml
+++ b/DNTProfiler/MainWindow.xaml
@@ -24,7 +24,7 @@
                 <RowDefinition Height="20" />
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="343*" />
-                <RowDefinition Height="45" />
+                <RowDefinition Height="Auto" />
                 <RowDefinition Height="20" />
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
@@ -83,6 +83,7 @@
 
             <StackPanel Grid.Row="3" Grid.ColumnSpan="2" Grid.Column="1">
                 <Border
+                    Name="FooterBorder"
                     CornerRadius="3"
                     Background="{StaticResource FooterBackgroundColor}" >
                     <Border.Effect>
@@ -93,10 +94,14 @@
                         <StackPanel VerticalAlignment="Center"
                                     HorizontalAlignment="Left"
                                     Orientation="Horizontal" Margin="5">
-                            <TextBlock Text="{Binding GuiModelData.PluginAuthorInfo}" Margin="1"
+                            <TextBlock Text="{Binding GuiModelData.PluginAuthorInfo}"
+                                       Margin="1"
+                                       Padding="1"
                                        Foreground="{StaticResource FooterFontColor}"
                                        TextWrapping="Wrap"
-                                       HorizontalAlignment="Left"
+                                       TextOptions.TextFormattingMode="Display"
+                                       HorizontalAlignment="Stretch"
+                                       Width="{Binding Path=ActualWidth, ElementName=FooterBorder}"
                                        VerticalAlignment="Center" />
                         </StackPanel>
                     </StackPanel>
